--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "convict": "^5.2.0",
     "express": "^4.17.1",
+    "graphql-request": "^1.8.2",
+    "properties-reader": "^1.0.0",
     "winston": "^3.2.1"
   }
 }
