--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "convict": "^5.2.0",
     "express": "^4.17.1",
     "graphql-request": "^1.8.2",
+    "mocha": "^7.1.0",
+    "nock": "^12.0.3",
+    "rewire": "^5.0.0",
     "winston": "^3.2.1"
   }
 }
